fixed width close btn on iphone

--- a/css/style.css
+++ b/css/style.css
@@ -1313,14 +1313,13 @@ h3 {
 
 .popup__btn-close {
   position: absolute;
-  right: 1rem;
-  top: 1.0625rem;
+  right: 0.375rem;
+  top: 0.4375rem;
   display: flex;
   justify-content: center;
   align-items: center;
   height: 2.5625rem;
   width: 2.5625rem;
-  margin: -0.625rem;
   aspect-ratio: 1/1;
   border-radius: 50%;
   background-color: transparent;
@@ -1402,8 +1401,8 @@ h3 {
   }
 
   .popup__btn-close {
-    right: 1.875rem;
-    top: 2.3125rem;
+    right: 1.25rem;
+    top: 1.6875rem;
   }
 }
 
